ajout des icones dans le menu

--- a/WingtipToys/Views/Shared/_Layout.cshtml
+++ b/WingtipToys/Views/Shared/_Layout.cshtml
@@ -36,11 +36,10 @@
 
         <div class="dock">
             <ul>
-                <li><a href=""><img src="Content/Images/home.png" alt="Home"></a></li>
-                <li><a href=""><img src="Content/Images/apple.png" alt="Apple"></a></li>
-                <li><a href=""><img src="Content/Images/safari.png" alt="Safari"></a></li>
-                <li><a href=""><img src="Content/Images/harddrive.png" alt="harddrive"></a></li>
-                <li><a href=""><img src="Content/Images/tools.png" alt="Tools"></a></li>
+                <li><a href=""><img src="Content/Images/acceuil.png" alt="Home"></a></li>
+                <li><a href=""><img src="Content/Images/galerie.png" alt="Safari"></a></li>
+                <li><a href=""><img src="Content/Images/apropos.png" alt="harddrive"></a></li>
+                <li><a href=""><img src="Content/Images/contact.png" alt="Tools"></a></li>
             </ul>
         </div>
     </div>
@@ -49,7 +48,6 @@
         <footer>
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
-    </div>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
