--- a/WingtipToys/Content/Site.css
+++ b/WingtipToys/Content/Site.css
@@ -1,6 +1,9 @@
 ﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    text-align: center;
+    max-width: 1280px;
+    background-image:url("./Images/fond.png");
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -8,6 +11,35 @@
     padding-left: 15px;
     padding-right: 15px;
 }
+
+.body-content{
+    float:right;
+    height:460px;
+    width:auto;
+    margin:0;
+    /*padding-right: 6px;*/
+    background-image:url("./Images/fond-center.png");
+    background-repeat: no-repeat;
+    /*margin-left:250px !important;*/
+}
+
+header{
+    height: 200px;
+    
+    text-align: left;
+    margin: 0px 30px 0px 30px;
+}
+
+.header-left{
+    display:inline;
+}
+.header-right{
+    display:inline;
+    float: right;
+    padding-top: 15px;
+    padding-right: 6px;
+}
+
 
 /* Set width on the form input elements since they're 100% wide by default */
 input,
