--- a/WingtipToys/Views/Shared/_Layout.cshtml
+++ b/WingtipToys/Views/Shared/_Layout.cshtml
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Mon application ASP.NET</title>
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <!--<div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -19,35 +19,43 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Nom de l'application", "Index", "Home", null, new { @class = "navbar-brand" })
+                @@Html.ActionLink("Nom de l'application", "Index", "Home", null, new { @@class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Accueil", "Index", "Home")</li>
-                    <li>@Html.ActionLink("À propos de", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@@Html.ActionLink("Accueil", "Index", "Home")</li>
+                    <li>@@Html.ActionLink("À propos de", "About", "Home")</li>
+                    <li>@@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
-                @Html.Partial("_LoginPartial")
+               @@Html.Partial("_LoginPartial")
             </div>
         </div>
+    </div>-->
+
+    <header>
+        <div class="header-left">
+            <img class="logoimg" src="Content/Images/logo.png">
+        </div>
+        <div class="header-right">
+            <img class="logoimg" src="Content/Images/fond-login.png">
+        </div>
+    </header>
+    <div class="dock">
+        <ul>
+            <li><a href=""><img src="Content/Images/acceuil.png" alt="Home"></a></li>
+            <li><a href=""><img src="Content/Images/galerie.png" alt="Safari"></a></li>
+            <li><a href=""><img src="Content/Images/apropos.png" alt="harddrive"></a></li>
+            <li><a href=""><img src="Content/Images/contact.png" alt="Tools"></a></li>
+        </ul>
     </div>
+
     <div class="container body-content">
         @RenderBody()
-
-        <div class="dock">
-            <ul>
-                <li><a href=""><img src="Content/Images/acceuil.png" alt="Home"></a></li>
-                <li><a href=""><img src="Content/Images/galerie.png" alt="Safari"></a></li>
-                <li><a href=""><img src="Content/Images/apropos.png" alt="harddrive"></a></li>
-                <li><a href=""><img src="Content/Images/contact.png" alt="Tools"></a></li>
-            </ul>
-        </div>
     </div>
 
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
+    <footer>
+        @*<p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>*@
+    </footer>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
