--- a/WingtipToys/Views/Shared/_Layout.cshtml
+++ b/WingtipToys/Views/Shared/_Layout.cshtml
@@ -40,17 +40,23 @@
             <img class="logoimg" src="Content/Images/fond-login.png">
         </div>
     </header>
-    <div class="dock">
-        <ul>
-            <li><a href=""><img src="Content/Images/acceuil.png" alt="Home"></a></li>
-            <li><a href=""><img src="Content/Images/galerie.png" alt="Safari"></a></li>
-            <li><a href=""><img src="Content/Images/apropos.png" alt="harddrive"></a></li>
-            <li><a href=""><img src="Content/Images/contact.png" alt="Tools"></a></li>
-        </ul>
-    </div>
+    
 
     <div class="container body-content">
-        @RenderBody()
+        <div class="dock">
+            <ul>
+                <li><a href=""><img src="Content/Images/acceuil.png" alt="Home"></a></li>
+                <li><a href=""><img src="Content/Images/galerie.png" alt="Safari"></a></li>
+                <li><a href=""><img src="Content/Images/apropos.png" alt="harddrive"></a></li>
+                <li><a href=""><img src="Content/Images/contact.png" alt="Tools"></a></li>
+            </ul>
+        </div>
+        <div id="content-center">
+            @RenderBody()
+            testdsadsadtestd sadsadtestdsadsa dtestdsadsa dtestdsadsadtestdsads adtestdsadsa 
+            dtestdsadsadtestdsadsa dtestdsadsadtestdsadsadte stdsadsadtestdsadsadtestdsadsad
+        </div>
+        
     </div>
 
     <footer>
