--- a/WingtipToys/Views/Shared/_Layout.cshtml
+++ b/WingtipToys/Views/Shared/_Layout.cshtml
@@ -34,10 +34,10 @@
 
     <header>
         <div class="header-left">
-            <img class="logoimg" src="Content/Images/logo.png">
+            <img class="logoimg" src="~/Content/Images/logo.png">
         </div>
         <div class="header-right">
-            <img class="logoimg" src="Content/Images/fond-login.png">
+            <img src="~/Content/Images/fond-login.png">
         </div>
     </header>
     
@@ -45,16 +45,15 @@
     <div class="container body-content">
         <div class="dock">
             <ul>
-                <li><a href=""><img src="Content/Images/acceuil.png" alt="Home"></a></li>
-                <li><a href=""><img src="Content/Images/galerie.png" alt="Safari"></a></li>
-                <li><a href=""><img src="Content/Images/apropos.png" alt="harddrive"></a></li>
-                <li><a href=""><img src="Content/Images/contact.png" alt="Tools"></a></li>
+                <li><a href="./"><img src="~/Content/Images/acceuil.png" alt="Home"></a></li>
+                <li><a href="./Products"><img src="~/Content/Images/galerie.png" alt="Safari"></a></li>
+                <li><a href="./About"><img src="~/Content/Images/apropos.png" alt="harddrive"></a></li>
+                <li><a href="./Contact"><img src="~/Content/Images/contact.png" alt="Tools"></a></li>
             </ul>
         </div>
         <div id="content-center">
             @RenderBody()
-            testdsadsadtestd sadsadtestdsadsa dtestdsadsa dtestdsadsadtestdsads adtestdsadsa 
-            dtestdsadsadtestdsadsa dtestdsadsadtestdsadsadte stdsadsadtestdsadsadtestdsadsad
+            
         </div>
         
     </div>
