--- a/WingtipToys/Views/Products/Create.cshtml
+++ b/WingtipToys/Views/Products/Create.cshtml
@@ -7,7 +7,7 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm(null, null, FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
@@ -35,8 +35,10 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ImagePath, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ImagePath)
-                @Html.ValidationMessageFor(model => model.ImagePath)
+                @*@Html.EditorFor(model => model.ImagePath)
+                @Html.ValidationMessageFor(model => model.ImagePath)*@
+                <input type="file" id="ImageFile" value="ImageFile" name="ImageFile" class="text-box single-line" style="display:-webkit-inline-box;display:-moz-box;" />
+                <img id="imgPreview" class="product-img" src="" />
             </div>
         </div>
 
@@ -70,4 +72,5 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/Scripts/preview.js")
 }
