--- a/WingtipToys/Views/Products/Details.cshtml
+++ b/WingtipToys/Views/Products/Details.cshtml
@@ -31,7 +31,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.ImagePath)
+            <img id="imgPreview" class="product-img" src="@Url.Content(@"~\Content\Upload\" + Model.ImagePath)" />
         </dd>
 
         <dt>
