--- a/WingtipToys/Content/Site.css
+++ b/WingtipToys/Content/Site.css
@@ -40,6 +40,8 @@ header{
     float: right;
     padding-top: 15px;
     padding-right: 6px;
+    background-image:url("./Images/fond-login.png");
+    background-repeat: no-repeat;
 }
 
 
