--- a/WingtipToys/Views/Shared/_Layout.cshtml
+++ b/WingtipToys/Views/Shared/_Layout.cshtml
@@ -37,7 +37,8 @@
             <img class="logoimg" src="~/Content/Images/logo.png">
         </div>
         <div class="header-right">
-            <img src="~/Content/Images/fond-login.png">
+            @*<img src="~/Content/Images/fond-login.png">*@
+            @Html.Partial("_LoginPartial")
         </div>
     </header>
     
