--- a/WingtipToys/Views/Categories/Index.cshtml
+++ b/WingtipToys/Views/Categories/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WingtipToys_Class.Categories>
+﻿@model IEnumerable<WingtipToys.Model.Categories>
 
 @{
     ViewBag.Title = "Index";
