--- a/WingtipToys/Views/Products/Index.cshtml
+++ b/WingtipToys/Views/Products/Index.cshtml
@@ -1,30 +1,37 @@
-﻿@model IEnumerable<WingtipToys_Class.Products>
+﻿@model IEnumerable<WingtipToys.Model.Products>
 
 @{
     ViewBag.Title = "Index";
 }
 
 <h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+@if (ViewContext.HttpContext.User.IsInRole("admin"))
+{
+    <p>
+        @Html.ActionLink("Create New", "Create")
+    </p>
+}
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.ProductName)
+            @*@Html.DisplayNameFor(model => model.ProductName)*@
+            Produit
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Description)
+            @*@Html.DisplayNameFor(model => model.Description)*@
+            Description
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.ImagePath)
+            @*@Html.DisplayNameFor(model => model.ImagePath)*@
+            Photo
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.UnitPrice)
+            @*@Html.DisplayNameFor(model => model.UnitPrice)*@
+            Prix
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Categories.CategoryName)
+            @*@Html.DisplayNameFor(model => model.Categories.CategoryName)*@
+            Catégorie
         </th>
         <th></th>
     </tr>
@@ -48,10 +55,21 @@
             @Html.DisplayFor(modelItem => item.Categories.CategoryName)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ProductID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ProductID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ProductID })
-        </td>
+           @if (ViewContext.HttpContext.User.IsInRole("admin"))
+           {
+                @Html.ActionLink("Edit", "Edit", new { id=item.ProductID }) <span>|</span>
+                @Html.ActionLink("Details", "Details", new { id=item.ProductID })    <span>|</span>
+                @Html.ActionLink("Delete", "Delete", new { id=item.ProductID })
+           }
+           else
+           {
+            @*<a href="/Products/?productID=<%#:Item.ProductID %>">*@
+                @Html.ActionLink("testAdd", "AddToCard", new { id = item.ProductID }, new { @class = "ajoutPanier" })
+                @*<img title="Ajouter au panier" src="@Url.Content("~/Content/Images/cadie.png")" />*@
+            @*</a>*@
+           }
+
+</td>
     </tr>
 }
 
